syntax = "proto3"; /* default is proto2 */
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option java_package = "proto";

service PersonService{

  rpc setPerson(Person) returns (Empty);
  rpc getPerson(PersonRequest) returns ( PersonResponse);
}

message Person {
  string name=1;
  string CNP=2;
}

message PersonRequest{
  string name=1;
}

message PersonResponse{
  Person person=1;
}

message Empty {
  /* EMPTY */
}